css/general.css
/**

--- 01 TYPOGRAPHY SYSTEM

- Font sizes (px): 
  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 /
  36 / 44 / 52 / 62 / 74 / 86 / 98

- Font weights: 
  Default:400
  Medium:500
  Semi-bold:600
  Bold:700

- Line heights: 
  Default: 1
  Medium: 1.2
  Paragraph default: 1.6

- Letter spacing: 
  -1.5px
  0.75px

--- 02 COLORS

-Primary: #e67e22 

-Tints:
 #fdf2e9 
 #fae5d3  
 #eb984e 
 
-Shades: 
 #cf711f 
 #45260a 

-Accents:

-Greys: 
 #888888 
 #767676 lightest grey allowed on #fff 
 #6f6f6f lightest grey allowed on #fdf2e9  
 #555555 
 #333333 

--- 05 SHADOWS
  Smooth: 0 2.4rem 4.8rem rgba(0,0,0,0.075) 
  

--- 06 BORDER-RADIUS

 Default: 9px
 Medium: 11px
--- 07 WHITESPACE

-SPACING SYSTEM (px)
  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48
  / 64 / 80 / 96 / 128
*/

/* ****************************** */
/** SET UP */
/* ****************************** */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  /* Percentage of user's browser font-size setting */
  font-size: 62.5%;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

body {
  font-family: "Rubik", sans-serif;
  line-height: 1;
  font-weight: 400;
  color: #555;
  overflow-x: hidden;
}

/* ****************************** */
/** GENERAL REUSABLE COMPONENTS */
/* ****************************** */

.container {
  /* 1140px */
  max-width: 120rem;
  padding: 0 3.2rem;
  margin: 0 auto;
}

.grid {
  display: grid;
  column-gap: 6.4rem;
  row-gap: 9.6rem;

}

.grid:not(:last-child) {
  margin-bottom: 9.6rem;
}

.grid--2-cols {
  grid-template-columns: repeat(2, 1fr);
}

.grid--3-cols {
  grid-template-columns: repeat(3, 1fr);
}

.grid--4-cols {
  grid-template-columns: repeat(4, 1fr);
}

.grid--5-cols {
  grid-template-columns: repeat(5, 1fr);
}

.grid--center-v {
  align-items: center;
}

.text-and-icon-center {
  display: flex !important;
  align-items: center;
  justify-content: center;
  gap: 0.4rem;
}

.text-and-icon-center span {
  display: flex;
  justify-content: center;
  align-items: center;
  line-height: 1;
  margin-top: 0.4rem;
}

.heading-primary,
.heading-secondary,
.heading-tertiary {
  font-weight: 700;
  color: #333;
  letter-spacing: -1.5px;
}

.heading-primary {
  font-size: 5.2rem;
  line-height: 1.05;
  margin-bottom: 3.2rem;
}

.heading-secondary {
  font-size: 4.4rem;
  line-height: 1.02;
  margin-bottom: 9.6rem;
}

.heading-tertiary {
  font-size: 3rem;
  margin-bottom: 3.2rem;
}

.subheading {
  display: block;
  font-size: 1.6rem;
  font-weight: 500;
  color: #cf711f;
  text-transform: uppercase;
  margin-bottom: 1.6rem;
  letter-spacing: 0.75px;
}

.btn,
.btn:link,
.btn:visited {
  display: inline-block;

  font-size: 2rem;
  padding: 1.6rem 3.2rem;
  border-radius: 9px;
  text-decoration: none;
  font-weight: 500;

  border: none;
  cursor: pointer;
  font-family: inherit;

  /* Put transition on original "state" */
  transition: all 0.2s;
}

.btn--full:link,
.btn--full:visited {
  background-color: #e67e22;
  color: #fff;
}

.btn--full:hover,
.btn--full:active {
  background-color: #cf711f;
}

.btn--outline:link,
.btn--outline:visited {
  background-color: #fff;
  color: #555;
}

.btn--outline:hover,
.btn--outline:active {
  background-color: #fdf2e9;
  /* Trick to add border inside */
  box-shadow: inset 0 0 0 3px #fff;
}

.btn--form {
  background-color: #45260a;
  color: #fdf2e9;
  align-self: self-end;
  padding: 1.2rem;
}

.btn--form:hover,
.btn--form:active {
  background-color: #fff;
  color: #555;
}

.link:link,
.link:visited {
  display: inline-block;
  color: #e67e22;
  text-decoration: none;
  border: 1px solid transparent;
  border-bottom: 1px solid currentColor;
  padding-bottom: 0.4rem;
  transition: all 0.3s;
}

.link:hover,
.link:active {
  border: 1px solid transparent;
  color: #cf711f;
}

.list {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.list-item {
  font-size: 1.8rem;
  display: flex;
  align-items: center;
  gap: 1.6rem;
  line-height: 1.2;
}

.list-icon {
  font-size: 3rem;
  color: #e67e22;
}

/* ****************************** */
/** HELPER/SETTINGS CLASSES */
/* ****************************** */

.margin-right-sm {
  margin-right: 1.6rem !important;
}

.margin-bottom-md {
  margin-bottom: 4.8rem !important;
}

.center-text {
  text-align: center;
}

strong {
  font-weight: 500;
}

